see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note


23-Jun-2010 Jean-Marie Simonet
$ Added missing string
 [#20641] Email Cloaking Plugin doesn't output well formed code. Thanks Nicholas.

23-Jun-2010 Andrew Eddie
 # Fixed issue [#20617] installer doesn't allow . in database name (Rob Joyce, Troy Hall).
 # Partial fixes to [#20907] Making Joomla more compliant to PHP strict standard.
 
22-Jun-2010 Ian MacLennan
 # [#21129] JHtml::_('behavior.keepalive'); Does not work (Phil Snell)

22-Jun-2010 Christophe Demko
 # Reverting patch #17774.

22-Jun-2010 Andrew Eddie
 # Fixed issue [#20971] Add getCaching method (Klas Berlič1).
 # Fixed issue [#20993] Token key word is not user friendly (Troy Hall).
 # Fixed issue [#20401] [PATCH] JError::handleDie() does not cause application termination in CLI-program (Artyom Bisyarin).
 
21-Jun-2010 Mark Dexter
# Beez template fixes (Angie Radke)

21-Jun-2010 Jean-Marie Simonet
[#21020] Ordering of weblinks does not work as expected. Thanks Omar.
[#21116] [patch] Update Hathor with the new saveorder icon behavior. Thanks Andrea.
[#21064] Login redirection not functioning. Thanks Omar.
[#21120] Article Button in Editor missing left side in Milkyway. Thanks Marijke
[#21057] Mistyped template name in joomla data. Thanks Christophe.
[#20725] System Path Disclosure
[#21037] Two similar options in Module Latest News. Thanks Christophe and Stephania. + string
[#21061] Fatal error when "Show Title" is set to "No". Thanks Omar.
[#20945] email error when creating a new user. Thanks Elin.
[#21059] Image selector layout problems. Thanks Omar.